--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,9 @@
 [versions]
 agp = "8.8.0"
 dotlottieAndroid = "0.0.3"
+exoplayer = "2.19.1"
+exoplayerVersion = "2.19.0"
+extensionRtsp = "2.19.0"
 firebaseBom = "33.6.0"
 kotlin = "1.9.24"
 coreKtx = "1.15.0"
@@ -22,6 +25,9 @@ firebaseStorageKtx = "21.0.1"
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 dotlottie-android = { module = "com.github.LottieFiles:dotlottie-android", version.ref = "dotlottieAndroid" }
+exoplayer = { module = "com.google.android.exoplayer:exoplayer", version.ref = "exoplayer" }
+exoplayer-v2190 = { module = "com.google.android.exoplayer:exoplayer", version.ref = "exoplayerVersion" }
+extension-rtsp = { module = "com.google.android.exoplayer:extension-rtsp", version.ref = "extensionRtsp" }
 firebase-analytics-ktx = { module = "com.google.firebase:firebase-analytics-ktx" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
