--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -16,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WildWatch1"
         tools:targetApi="31">
+        <activity
+            android:name=".HardwareManagment"
+            android:exported="false" />
         <activity
             android:name=".item_video"
             android:exported="false" />
@@ -65,6 +67,5 @@
             android:name=".precautionary_measures"
             android:exported="false" />
     </application>
-
 
 </manifest>
