--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.WildWatch1"
         tools:targetApi="31">
         <activity
+            android:name=".changePassword"
+            android:exported="false" />
+        <activity
             android:name=".dialog_mute_unmute"
             android:exported="false" />
         <activity
@@ -35,9 +38,6 @@
             android:exported="false" />
         <activity
             android:name=".trendAnalysis"
-            android:exported="false" />
-        <activity
-            android:name=".hardwareMgt"
             android:exported="false" />
         <activity
             android:name=".MainMenu"
