--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
             android:exported="false" />
         <activity
             android:name=".LoginSignup"
-            android:exported="false" /> <!-- Main activity (Launcher activity) -->
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
