--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.WildWatch1"
         tools:targetApi="31">
         <activity
+            android:name=".precautionaryMeasures2"
+            android:exported="false" />
+        <activity
             android:name=".changePassword"
             android:exported="false" />
         <activity
@@ -41,7 +44,13 @@
             android:exported="false" />
         <activity
             android:name=".MainMenu"
-            android:exported="false" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".SignupActivity"
             android:exported="false" />
@@ -53,13 +62,8 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity> <!-- Other activities -->
+            android:exported="true"/>
+            <!-- Other activities -->
         <activity
             android:name=".suspicious_activity"
             android:exported="false" />
