--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.WildWatch1"
         tools:targetApi="31">
         <activity
+            android:name=".itemCamera"
+            android:exported="false" />
+        <activity
             android:name=".precautionaryMeasures2"
             android:exported="false" />
         <activity
@@ -44,7 +47,7 @@
             android:exported="false" />
         <activity
             android:name=".MainMenu"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -62,8 +65,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true"/>
-            <!-- Other activities -->
+            android:exported="true" /> <!-- Other activities -->
         <activity
             android:name=".suspicious_activity"
             android:exported="false" />
