--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ lottie = "6.1.0"
 material = "1.12.0"
 activity = "1.9.3"
 constraintlayout = "2.2.0"
+media3Exoplayer = "1.6.0"
 playServicesMaps = "19.0.0"
 core = "1.15.0"
 firebaseAuthKtx = "23.1.0"
@@ -25,6 +26,8 @@ runner = "1.6.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-media3-exoplayer = { module = "androidx.media3:media3-exoplayer", version.ref = "media3Exoplayer" }
+androidx-media3-ui = { module = "androidx.media3:media3-ui", version.ref = "media3Exoplayer" }
 dotlottie-android = { module = "com.github.LottieFiles:dotlottie-android", version.ref = "dotlottieAndroid" }
 exoplayer = { module = "com.google.android.exoplayer:exoplayer", version.ref = "exoplayer" }
 exoplayer-v2190 = { module = "com.google.android.exoplayer:exoplayer", version.ref = "exoplayerVersion" }
