--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,6 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
-
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -21,70 +19,31 @@
         android:theme="@style/Theme.WildWatch1"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
         tools:targetApi="31">
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCrMJX4e-1RuYCmLrT3upCPJBxAzv_6yjg" />
 
-        <activity
-            android:name=".AnimalDetailActivity"
-            android:exported="false" />
-        <activity
-            android:name=".TrendAnalysisActivity2"
-            android:exported="false" />
-        <activity
-            android:name=".MapsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LastDetectionActivity"
-            android:exported="false" />
-        <activity
-            android:name=".NotificationsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".itemCamera"
-            android:exported="false" />
-        <activity
-            android:name=".precautionaryMeasures2"
-            android:exported="false" />
-        <activity
-            android:name=".changePassword"
-            android:exported="false" />
-        <activity
-            android:name=".dialog_mute_unmute"
-            android:exported="false" />
-        <activity
-            android:name=".HardwareManagement"
-            android:exported="false" />
-        <activity
-            android:name=".item_video"
-            android:exported="false" />
-        <activity
-            android:name=".notificationMgt"
-            android:exported="false" />
-        <activity
-            android:name=".liveStream"
-            android:exported="false" />
-        <activity
-            android:name=".userProfile"
-            android:exported="false" />
-        <activity
-            android:name=".trendAnalysis"
-            android:exported="false" />
-        <activity
-            android:name=".MainMenu"
-            android:exported="false"></activity>
-        <activity
-            android:name=".SignupActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LoginSignup"
-            android:exported="false" />
+        <activity android:name=".AnimalDetailActivity" android:exported="false" />
+        <activity android:name=".TrendAnalysisActivity2" android:exported="false" />
+        <activity android:name=".MapsActivity" android:exported="false" />
+        <activity android:name=".LastDetectionActivity" android:exported="false" />
+        <activity android:name=".NotificationsActivity" android:exported="false" />
+        <activity android:name=".itemCamera" android:exported="false" />
+        <activity android:name=".precautionaryMeasures2" android:exported="false" />
+        <activity android:name=".changePassword" android:exported="false" />
+        <activity android:name=".dialog_mute_unmute" android:exported="false" />
+        <activity android:name=".HardwareManagement" android:exported="false" />
+        <activity android:name=".item_video" android:exported="false" />
+        <activity android:name=".notificationMgt" android:exported="false" />
+        <activity android:name=".liveStream" android:exported="false" />
+        <activity android:name=".userProfile" android:exported="false" />
+        <activity android:name=".trendAnalysis" android:exported="false" />
+        <activity android:name=".MainMenu" android:exported="false" />
+        <activity android:name=".SignupActivity" android:exported="false" />
+        <activity android:name=".LoginActivity" android:exported="false" />
+        <activity android:name=".LoginSignup" android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -94,15 +53,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".suspicious_activity"
-            android:exported="false" />
-        <activity
-            android:name=".recent_locations"
-            android:exported="false" />
-        <activity
-            android:name=".precautionary_measures"
-            android:exported="false" />
+        <activity android:name=".suspicious_activity" android:exported="false" />
+        <activity android:name=".recent_locations" android:exported="false" />
+
     </application>
 
 </manifest>
