--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
+
 
     <application
         android:allowBackup="true"
@@ -32,14 +34,11 @@
         <activity android:name=".NotificationsActivity" android:exported="false" />
         <activity android:name=".itemCamera" android:exported="false" />
         <activity android:name=".precautionaryMeasures2" android:exported="false" />
-        <activity android:name=".changePassword" android:exported="false" />
         <activity android:name=".dialog_mute_unmute" android:exported="false" />
         <activity android:name=".HardwareManagement" android:exported="false" />
         <activity android:name=".item_video" android:exported="false" />
         <activity android:name=".notificationMgt" android:exported="false" />
         <activity android:name=".liveStream" android:exported="false" />
-        <activity android:name=".userProfile" android:exported="false" />
-        <activity android:name=".trendAnalysis" android:exported="false" />
         <activity android:name=".MainMenu" android:exported="false" />
         <activity android:name=".SignupActivity" android:exported="false" />
         <activity android:name=".LoginActivity" android:exported="false" />
